
  [ Mario Limonciello ]
  * Don't show logout option in only-ubiquity mode(s) (LP: #618744)
  * Don't show a minimize option in only-ubiquity mode(s) (LP: #627656)
  * Translate the page_title of the language page when languages are
    swapped.
  * Restore functionality to set the GTK slideshow size based on a 
    configuration file that was lost in r4123.1.37.

  [ Evan Dandrea ]
  * Do not generate or show the bootloader options if we're on x86, or
    bootloader installation is explicitly disabled (LP: #628582).
  * Add correct URL for the Geonames service.

  [ Colin Watson ]
  * Remove a number of unused or duplicate imports.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 03 Sep 2010 01:48:50 -0500

ubiquity (2.3.15) maverick; urgency=low

  * Clean stray QSocketNotifiers that were missed because their fd was
    reused before they could normally be deleted.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 02 Sep 2010 10:21:58 +0100

ubiquity (2.3.14) maverick; urgency=low

  [ Colin Watson ]
  * KDE frontend:
    - If the slideshow doesn't exist, hide self.ui.pageMode rather than
      self.page_mode (LP: #627549).
  * Set Debug::identcdrom=true for apt-cdrom if installing from a
    non-ISO9660 filesystem, since otherwise apt-cdrom will include the free
    blocks count of /cdrom in its database which is unreliable on read-write
    filesystems, especially USB images with persistence enabled.  Thanks to
    Manoj Iyer for patient testing (LP: #627672).

  [ Mario Limonciello ]
  * Provides indicator-renderer (LP: #616165)

  [ Evan Dandrea ]
  * Disconnect and destroy QSocketNotifiers when the dbfilter finishes.
    Thanks Colin Watson (LP: #625586).
  * add the check_hostname function back to ubi-usersetup (LP: #628317).

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 02 Sep 2010 01:42:52 +0100

ubiquity (2.3.13) maverick; urgency=low

  [ Mario Limonciello ]
  * When using xfsettingsd, set the background to black first.