@@ -7,6 +7,8 @@ ubiquity (2.3.16) UNRELEASED; urgency=low
     swapped.
   * Restore functionality to set the GTK slideshow size based on a 
     configuration file that was lost in r4123.1.37.
+  * Parse the slideshow size when the GTK frontend first starts to
+    prevent the window resizing later.
 
   [ Evan Dandrea ]
   * Do not generate or show the bootloader options if we're on x86, or
